--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "deploy": "electron-builder build --mac --win --publish always",
+    "build": "electron-builder build"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stroogle/electron-auto-update.git"
+  },
   "keywords": [
     "Electron",
     "quick",
@@ -17,6 +22,10 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^12.0.0"
+    "electron": "^12.0.1",
+    "electron-builder": "^22.10.5"
+  },
+  "dependencies": {
+    "electron-updater": "^4.3.8"
   }
 }
